--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ packages = find:
 install_requires =
     numpy
     pandas
+    tabulate
 python_requires = >=3.6
 include_package_data = True
 setup_requires = setuptools
