--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,6 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
 license = MIT
@@ -22,7 +21,7 @@ install_requires =
     numpy
     pandas
     tabulate
-python_requires = >=3.6
+python_requires = >3.6
 include_package_data = True
 setup_requires = setuptools
 
