--- a/setup.cfg
+++ b/setup.cfg
@@ -27,4 +27,4 @@ setup_requires = setuptools
 
 [options.entry_points]
 console_scripts =
-    dask_mem_usage = ncar_dask_monitor.dask_mem_usage:main
+    dask_resource_monitor = ncar_dask_monitor.dask_mem_usage:main
