adding new entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,4 @@ setup_requires = setuptools
 [options.entry_points]
 console_scripts =
     dask_resource_monitor = ncar_dask_monitor.dask_mem_usage:main
+    casper_resource_monitor = ncar_dask_monitor.casper_resource_monitor
